@@ -26,6 +26,8 @@ ver. 0.8.1 (2007/??/??) - stable
   to Yaroslav Halchenko
 - Added new action iptables-allports. Thanks to Yaroslav
   Halchenko
+- Added "named" date format to date detector. Thanks to
+  Yaroslav Halchenko
 
 ver. 0.8.0 (2007/05/03) - stable
 ----------
